Fix hw6 accord to comments